crates/sith_python_parser/tests/snapshots/invalid_syntax@del_stmt_empty.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/del_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        range: 0..4,
        body: [
            Delete(
                DeleteStmt {
                    range: 0..3,
                    targets: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | del
  |    ^ Syntax Error: Delete statement must have at least one target
  |
